core/src/main/test/templates/error/foreach1.zs
jhjklk;asdf
akjaskfj;asjdf jaskdfj alks
kasdldfkj 
asdfalkjsdlfj
[#if foo]
	[#foreach bar if bib]
		[#while bbb aaa]
			ppp
		[/#while]
	[/#foreach]
[/#if]